objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Legal_Review_Required__c</fullName>
        <label>Legal Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Review_Start_Date__c</fullName>
        <label>Legal Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limitations_of_Liability_Direct_Damage__c</fullName>
        <label>Limitations of Liability - Direct Damage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1x ACV</fullName>
                    <default>true</default>
                    <label>1x ACV</label>
                </value>
                <value>
                    <fullName>1x - 3x ACV</fullName>
                </value>
                <value>
                    <fullName>3x - 5x ACV</fullName>
                </value>
                <value>
                    <fullName>&gt; 5x ACV</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limitations_of_Liability_IndirectDamages__c</fullName>
        <label>Limitations of Liability-Indirect Damage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1x ACV</fullName>
                </value>
                <value>
                    <fullName>1x - 3x ACV</fullName>
                </value>
                <value>
                    <fullName>3x - 5x ACV</fullName>
                </value>
                <value>
                    <fullName>&gt; 5x ACV</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limitations_of_Liability__c</fullName>
        <label>Limitations of Liability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carve-out IP (3rd Party)</fullName>
                </value>
                <value>
                    <fullName>Carve-out IP (CounterParty)</fullName>
                </value>
                <value>
                    <fullName>Carve-out Gross Neg,Int,Mis,Vio</fullName>
                </value>
                <value>
                    <fullName>High damages cap IP (3rd Party)</fullName>
                </value>
                <value>
                    <fullName>High damages cap IP (CounterParty)</fullName>
                </value>
                <value>
                    <fullName>High damages cap gross neg,misc,law vio</fullName>
                </value>
                <value>
                    <fullName>High damages cap - breach of confi</fullName>
                </value>
                <value>
                    <fullName>High damages cap – breach of PII</fullName>
                </value>
                <value>
                    <fullName>High damages cap - info sec measures</fullName>
                </value>
                <value>
                    <fullName>High damages cap – breach of warranties</fullName>
                </value>
                <value>
                    <fullName>Indirect damages for some or all claims</fullName>
                </value>
                <value>
                    <fullName>Damages limited - Highly Sens PI</fullName>
                </value>
                <value>
                    <fullName>Non Stnd definition of Highly Sens PI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_Type__c</fullName>
        <label>Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Ultimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Opportunity_Net_Amount__c</fullName>
        <formula>SBQQ__Opportunity__r.Net_Amount_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Opportunity Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Damages__c</fullName>
        <label>Maximum Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Years_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Years Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nego_Opposing_Counsel_Days_Count__c</fullName>
        <label>Nego. Opposing Counsel Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Diff__c</fullName>
        <formula>Master_Opportunity_Net_Amount__c -  Renewed_Net_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Stnd_definition_of_Highly_PI_Damages__c</fullName>
        <label>Non Stnd definition of Highly PI Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Stnd_definition_of_Highly_Sens_PI__c</fullName>
        <label>Non Stnd definition of Highly Sens PI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_solicitation__c</fullName>
        <label>Non-solicitation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-way (restricting Cvent)</fullName>
                </value>
                <value>
                    <fullName>1-way (excluding general solic)</fullName>
                </value>
                <value>
                    <fullName>2-way (mutual restriction)</fullName>
                </value>
                <value>
                    <fullName>2-way (excluding general solic)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_solicitation_of_Customer_Employees__c</fullName>
        <label>Non-solicitation of Customer Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nonstandard_SLA__c</fullName>
        <label>Nonstandard SLA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System availability commitment</fullName>
                </value>
                <value>
                    <fullName>System response time commitment</fullName>
                </value>
                <value>
                    <fullName>Service CR (availability/response time)</fullName>
                </value>
                <value>
                    <fullName>Service CR (CS HelpDesk/App Support)</fullName>
                </value>
                <value>
                    <fullName>Termination rights</fullName>
                </value>
                <value>
                    <fullName>Issue severity definitions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnArrival_360_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnArrival 360 Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_hold_days_Count__c</fullName>
        <label>On hold days Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Bill_to_Address__c</fullName>
        <formula>SBQQ__Opportunity__r.Bill_To_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Bill to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Associated__c</fullName>
        <formula>SBQQ__Opportunity__r.Contact_Associated__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Contact Associated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>name of the opportunity</description>
        <formula>SBQQ__Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>name of the opportunity</inlineHelpText>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Primary_Opportunity__r.Owner.FirstName&amp;' '&amp;Primary_Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Term_Years__c</fullName>
        <formula>TEXT(Parent_Contract__r.Contract_Term_Years__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Contract Term (years)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Term__c</fullName>
        <formula>VALUE(TEXT(Parent_Contract__r.Contract_Term_Years__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Read/Write access granted to Finance CI Team for manual upload. Access will be revoked once we built the automated solution.</description>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Child Contracts</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>IF(ISBLANK(SBQQ__Quote__c), "by Invoice", 
TEXT(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Payment_Method__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>IF(ISBLANK(SBQQ__Quote__c), "Net 30", TEXT(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__PaymentTerms__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Increase_Notes__c</fullName>
        <label>Price Increase - Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Restrictions__c</fullName>
        <label>Price Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cap on price increases</fullName>
                </value>
                <value>
                    <fullName>Most favored pricing</fullName>
                </value>
                <value>
                    <fullName>Other Pricing Restrictions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Restrictions__c</fullName>
        <label>Pricing Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cap on price increases</fullName>
                </value>
                <value>
                    <fullName>Most favored pricing</fullName>
                </value>
                <value>
                    <fullName>Other Pricing Restrictions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Enhancement_Approved_Comments__c</fullName>
        <description>This field has been created to enter the comments by DQ and Pete for the product enhancement request being approved or rejected</description>
        <label>Product Enhancement Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Enhancement_Approved__c</fullName>
        <description>This field has been created for DQ and Pete to update the status for Product Enhancement request submitted by Sales Rep</description>
        <label>Product Enhancement Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Enhancement_Comments__c</fullName>
        <inlineHelpText>Provide the details of the product enhancement commitment written into the contract</inlineHelpText>
        <label>Product Enhancement Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Enhancement__c</fullName>
        <inlineHelpText>Technology review is required where SLA Type = “Nonstandard SLA”</inlineHelpText>
        <label>Product Enhancement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Enhancements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Enhancements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Text(Primary_Opportunity__r.Product__c)</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publicity_and_Use_of_Name_Logo__c</fullName>
        <label>Publicity and Use of Name/Logo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard publicity/use of name prov.</fullName>
                </value>
                <value>
                    <fullName>Prior consent required for all uses</fullName>
                </value>
                <value>
                    <fullName>Name only (no logo w/o consent)</fullName>
                </value>
                <value>
                    <fullName>Authorized for use on customer List</fullName>
                </value>
                <value>
                    <fullName>Authorized for use in marketing docs</fullName>
                </value>
                <value>
                    <fullName>Authorized for use in investor docs</fullName>
                </value>
                <value>
                    <fullName>Authorized for use in press releases</fullName>
                </value>
                <value>
                    <fullName>Provision Struck (Contract Silent)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publicity_and_use_of_Name_Logos__c</fullName>
        <label>Publicity and use of Name/Logos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>With written consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Signature_Days_Count__c</fullName>
        <label>Ready for Signature Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Days_Count__c</fullName>
        <label>Received Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Master_Term__c</fullName>
        <formula>VALUE(Parent_Contract_Term_Years__c) - Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Parent Term (years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renegotiation_Days_Count__c</fullName>
        <label>Renegotiation Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Creation_Date__c</fullName>
        <inlineHelpText>Date the renewal opportunity will be automatically created.</inlineHelpText>
        <label>Renewal Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Notes__c</fullName>
        <label>Renewal Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Creation__c</fullName>
        <inlineHelpText>Number of days before the contract end date that a renewal opportunity and quote are automatically created.</inlineHelpText>
        <label>Renewal Opportunity Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 days in advance</fullName>
                </value>
                <value>
                    <fullName>60 days in advance</fullName>
                </value>
                <value>
                    <fullName>90 days in advance</fullName>
                </value>
                <value>
                    <fullName>120 days in advance</fullName>
                </value>
                <value>
                    <fullName>180 days in advance</fullName>
                </value>
                <value>
                    <fullName>365 days in advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_ID__c</fullName>
        <formula>CASESAFEID(SBQQ__RenewalOpportunity__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Notice_Period_days__c</fullName>
        <label>Renewal Term Notice Period (days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                    <default>true</default>
                    <label>60</label>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Term_Notice_days__c</fullName>
        <formula>IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Notice_Days__c,"30"),"30", 
IF( ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Notice_Days__c,"45"),"45", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Notice_Days__c,"60"),"60", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Notice_Days__c,"90"),"90",NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Term Notice (days)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Years__c</fullName>
        <formula>IF( 
ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"Less than 1 year"),"Less than 1 year", 
IF( 
ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"1"),"1", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"2"),"2", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"3"),"3", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"4"),"4", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"5"),"5", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"6"),"6", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"7"),"7", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"8"),"8", 
IF(ISPICKVAL(Primary_Opportunity__r.Renewal_Term_Years__c,"9"),"9",NULL 
))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Term (Years)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewed_Net_Amount__c</fullName>
        <formula>SBQQ__RenewalOpportunity__r.Net_Amount_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Rcvd_Counterparty_Days_Count__c</fullName>
        <label>Response Rcvd Counterparty Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_to_Use_Client_Data_Score__c</fullName>
        <formula>IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Right_to_Use_Client_Data__c, "For commercial purposes"),4*0.03,
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Right_to_Use_Client_Data__c, "Internal use only"),1*0.03,
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Right_to_Use_Client_Data__c, "Silent"),3*0.03,0*0.03)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Right to Use Client Data - Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_to_Use_Client_Data__c</fullName>
        <label>Right to Use Client Data</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal use only</fullName>
                </value>
                <value>
                    <fullName>For commercial purposes</fullName>
                    <default>true</default>
                    <label>For commercial purposes</label>
                </value>
                <value>
                    <fullName>Silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Other__c</fullName>
        <label>SLA: Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Tech_Review_Comments__c</fullName>
        <label>SLA/Tech Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLA_Tech_Review_Completed__c</fullName>
        <label>SLA/Tech Review Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Tech_Review_Days_Count__c</fullName>
        <formula>IF(
(SLA_Tech_Review_End_Date__c - SLA_Tech_Review_Start_Date__c = 0),1,SLA_Tech_Review_End_Date__c - SLA_Tech_Review_Start_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA/Tech Review Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Tech_Review_End_Date__c</fullName>
        <label>SLA/Tech Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Tech_Review_Required__c</fullName>
        <inlineHelpText>Technology review is required where SLA Type = “Nonstandard SLA”</inlineHelpText>
        <label>SLA/Tech Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Tech_Review_Start_Date__c</fullName>
        <label>SLA/Tech Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Tech_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA/Tech Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <inlineHelpText>Technology review is required where SLA Type = “Nonstandard SLA”</inlineHelpText>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard SLA (Old Version)</fullName>
                </value>
                <value>
                    <fullName>Standard SLA (Current Version)</fullName>
                </value>
                <value>
                    <fullName>Nonstandard SLA</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No SLA provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Review_Comments__c</fullName>
        <label>Security Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Completed__c</fullName>
        <label>Security Review Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Review_Days_Count__c</fullName>
        <formula>IF(
(Security_Review_End_Date__c - Security_Review_Start_Date__c = 0),1,Security_Review_End_Date__c - Security_Review_Start_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Review Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Review_End_Date__c</fullName>
        <label>Security Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Review_Required__c</fullName>
        <inlineHelpText>Information Security review is required where response equals “Yes”</inlineHelpText>
        <label>Security Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Review_Start_Date__c</fullName>
        <label>Security Review Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>